# src/controllers/message.controller.ts
@@ -14,6 +14,20 @@ class MessageController {
     const response = await MessageService.reply(id, reply);
     res.status(200).json(response);
   }
+
+  async fetchAgentMessages(req: Request, res: Response) {
+    const { agentId } = req.params;
+
+    const response = await MessageService.fetchAgentMessages(agentId);
+    res.status(200).json(response);
+  }
+
+  async search(req: Request, res: Response) {
+    const { keyword } = req.query;
+
+    const response = await MessageService.search(<string> keyword);
+    res.status(200).json(response);
+  }
 }
 
 export default new MessageController();
